--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -9,7 +9,7 @@
       Uma de três colunas
     </div>
     <div class="col-sm">
-      Uma de três colunas
+     <a href="{% url 'logout' %}">Logout</a>
     </div>
   </div>
 {% endblock %}
