--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -6,10 +6,19 @@
       Uma de três colunas
     </div>
     <div class="col-sm">
-      Uma de três colunas
+      Ola {{ usuario.funcionario.nome}}
+        <a href="{% url 'list_funcionarios %}'">Gerenciar funcionarios</a>
     </div>
     <div class="col-sm">
      <a href="{% url 'logout' %}">Logout</a>
+
+      {% if usuario.funcionario.empresa %}
+        <a href="{% url 'edit_empresa' usuario.funcionario.empresa.id %}">Editar Empresa</a>
+      {% else %}
+        <a href="{% url 'create_empresa' %}">Criar Empresa</a>
+      {% endif %}
+
+
     </div>
   </div>
 {% endblock %}
